[SUCCESS] Ajax Calling through frontend

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=c3-frontend
+## Database
+spring.datasource.url=jdbc:postgresql://34.143.201.80:5432/postgres
+spring.datasource.username=postgres
+spring.datasource.password=demidemodei
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.format_sql=true
+
+server.port=8081
