--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=c3-frontend
+
+spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
+
+app.mcs.authentication.domain=http://35.198.196.1
+app.mcs.authentication.checktoken.route=/api/auth/check-token
