--- a/.github/workflows/artifact.yml
+++ b/.github/workflows/artifact.yml
@@ -9,7 +9,7 @@ on:
       - staging
   schedule:
     # Every day at 1am
-    - cron: '0 1 * * *'
+    - cron: '0 */2 * * *'
 
 permissions:
   actions: write
