--- a/.github/workflows/artifact.yml
+++ b/.github/workflows/artifact.yml
@@ -1,39 +1,23 @@
-name: Remove old artifacts
+name: Clean Artifacts
 
 on:
   push:
-    branches: 
-      - staging
-  pull_request:
     branches:
-      - staging
-  schedule:
-    # Every day at 1am
-    - cron: '0 */2 * * *'
+      - main
 
-permissions:
-  actions: write
-  contents: read
-  
 jobs:
-  cleanup_artifacts:
+  clean:
     runs-on: ubuntu-latest
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
 
-    - name: Remove old artifacts
-      uses: actions/github-script@v6
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v2
+
+    - name: Set up JDK 11
+      uses: actions/setup-java@v3
       with:
-        script: |
-          const res = await github.rest.actions.listArtifactsForRepo({
-            owner: context.repo.owner,
-            repo: context.repo.repo,
-          });
-          res.data.artifacts.forEach(async (artifact) => {
-            await github.rest.actions.deleteArtifact({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              artifact_id: artifact.id,
-            });
-          });
+        java-version: '11'
+        distribution: 'adopt'
+
+    - name: Clean Gradle artifacts
+      run: ./gradlew clean
