--- a/ci.yml
+++ b/ci.yml
@@ -137,38 +137,38 @@ jobs:
           docker build --build-arg PRODUCTION=$PRODUCTION --build-arg JDBC_DATABASE_PASSWORD=$JDBC_DATABASE_PASSWORD --build-arg JDBC_DATABASE_URL=$JDBC_DATABASE_URL --build-arg JDBC_DATABASE_USERNAME=$JDBC_DATABASE_USERNAME -t ${{ secrets.REGISTRY_USER }}/${{ secrets.IMAGE_NAME }}:${{ secrets.IMAGE_TAG }} .
           docker push ${{ secrets.REGISTRY_USER }}/${{ secrets.IMAGE_NAME }}:${{ secrets.IMAGE_TAG }}
 
-  deploy:
-    name: Deploy
-    runs-on: ubuntu-latest
-    needs: publish
-    steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v4
+  # deploy:
+  #   name: Deploy
+  #   runs-on: ubuntu-latest
+  #   needs: publish
+  #   steps:
+  #     - name: Checkout Repository
+  #       uses: actions/checkout@v4
 
-      - name: Install SSH client
-        run: sudo apt-get install openssh-client
+  #     - name: Install SSH client
+  #       run: sudo apt-get install openssh-client
 
-      - name: create ssh key
-        run: echo "${{ secrets.SSH_KEY }}" > ssh-key.pem && cat ssh-key.pem
+  #     - name: create ssh key
+  #       run: echo "${{ secrets.SSH_KEY }}" > ssh-key.pem && cat ssh-key.pem
 
-      - name: update permission
-        run: chmod 400 ssh-key.pem
+  #     - name: update permission
+  #       run: chmod 400 ssh-key.pem
     
-      - name: Deploy to GCP
-        run: |
-          scp -o StrictHostKeyChecking=no -i ssh-key.pem -r ./docker-compose.yml ./monitoring ${{ secrets.GCP_USERNAME }}@${{ secrets.GCP_STATIC_IP }}:~/
-          ssh -o StrictHostKeyChecking=no -i ssh-key.pem ${{ secrets.GCP_USERNAME }}@${{ secrets.GCP_STATIC_IP }} "
-            echo 'Stopping existing container...' &&
-            sudo docker stop ${{ secrets.CONTAINER_NAME }}  || true && 
-            echo 'Removing existing container...' &&
-            sudo docker container rm -f ${{ secrets.CONTAINER_NAME }}  || true && 
-            echo 'Removing existing image...' &&
-            sudo docker image rm -f ${{ secrets.REGISTRY_USER }}/${{ secrets.IMAGE_NAME }}:${{ secrets.IMAGE_TAG }}  || true &&
-            echo 'Pulling new image...' &&
-            sudo docker pull ${{ secrets.REGISTRY_USER }}/${{ secrets.IMAGE_NAME }}:${{ secrets.IMAGE_TAG }} && 
-            echo 'Running new container...' &&
-            sudo docker run --name ${{ secrets.CONTAINER_NAME }} --restart unless-stopped -d -p 80:8080 ${{ secrets.REGISTRY_USER }}/${{ secrets.IMAGE_NAME }}:${{ secrets.IMAGE_TAG }} &&
-            echo 'Docker compose' &&
-            sudo docker compose up -d &&
-            echo 'Deployment complete.' &&
-            exit"
+  #     - name: Deploy to GCP
+  #       run: |
+  #         scp -o StrictHostKeyChecking=no -i ssh-key.pem -r ./docker-compose.yml ./monitoring ${{ secrets.GCP_USERNAME }}@${{ secrets.GCP_STATIC_IP }}:~/
+  #         ssh -o StrictHostKeyChecking=no -i ssh-key.pem ${{ secrets.GCP_USERNAME }}@${{ secrets.GCP_STATIC_IP }} "
+  #           echo 'Stopping existing container...' &&
+  #           sudo docker stop ${{ secrets.CONTAINER_NAME }}  || true && 
+  #           echo 'Removing existing container...' &&
+  #           sudo docker container rm -f ${{ secrets.CONTAINER_NAME }}  || true && 
+  #           echo 'Removing existing image...' &&
+  #           sudo docker image rm -f ${{ secrets.REGISTRY_USER }}/${{ secrets.IMAGE_NAME }}:${{ secrets.IMAGE_TAG }}  || true &&
+  #           echo 'Pulling new image...' &&
+  #           sudo docker pull ${{ secrets.REGISTRY_USER }}/${{ secrets.IMAGE_NAME }}:${{ secrets.IMAGE_TAG }} && 
+  #           echo 'Running new container...' &&
+  #           sudo docker run --name ${{ secrets.CONTAINER_NAME }} --restart unless-stopped -d -p 80:8080 ${{ secrets.REGISTRY_USER }}/${{ secrets.IMAGE_NAME }}:${{ secrets.IMAGE_TAG }} &&
+  #           echo 'Docker compose' &&
+  #           sudo docker compose up -d &&
+  #           echo 'Deployment complete.' &&
+  #           exit"
