--- a/.github/workflows/artifact.yml
+++ b/.github/workflows/artifact.yml
@@ -1,23 +1,40 @@
-name: Clean Artifacts
+name: Remove old artifacts
 
 on:
   push:
+    branches: 
+      - main
+      - staging
+  pull_request:
     branches:
       - main
+      - staging
+  schedule:
+    - cron: '0 */2 * * *'
 
+permissions:
+  actions: write
+  contents: read
+  
 jobs:
-  clean:
+  cleanup_artifacts:
     runs-on: ubuntu-latest
-
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v2
+    - name: Checkout code
+      uses: actions/checkout@v3
 
-    - name: Set up JDK 11
-      uses: actions/setup-java@v3
+    - name: Remove old artifacts
+      uses: actions/github-script@v6
       with:
-        java-version: '11'
-        distribution: 'adopt'
-
-    - name: Clean Gradle artifacts
-      run: ./gradlew clean
+        script: |
+          const res = await github.rest.actions.listArtifactsForRepo({
+            owner: context.repo.owner,
+            repo: context.repo.repo,
+          });
+          res.data.artifacts.forEach(async (artifact) => {
+            await github.rest.actions.deleteArtifact({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              artifact_id: artifact.id,
+            });
+          });
