--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,4 @@ spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
 app.mcs.authentication.domain=http://34.143.221.150
 app.mcs.authentication.checktoken.route=/api/auth/check-token
 server.port=8081
+backend.url=http://34.101.35.243
