--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,8 @@ spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
 
 app.mcs.authentication.domain=http://34.143.221.150
 app.mcs.authentication.checktoken.route=/api/auth/check-token
+
+management.endpoints.web.exposure.include=*
+management.endpoint.prometheus.enabled=true
+
+management.prometheus.metrics.export.enabled=true
